--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -199,19 +199,19 @@ steps:
 
   - label: "🫐 gpu tripolar grid tests"
     env:
-      JULIA_DEPOT_PATH: "$SVERDRUP_HOME/.julia-$BUILDKITE_BUILD_NUMBER"
+      JULIA_DEPOT_PATH: "$TARTARUS_HOME/.julia-$BUILDKITE_BUILD_NUMBER"
       TEST_GROUP: "tripolar_grid"
       GPU_TEST: "true"
     commands:
-      - "$SVERDRUP_HOME/julia-$JULIA_VERSION/bin/julia -O0 --color=yes --project -e 'using Pkg; Pkg.test()'"
+      - "$TARTARUS_HOME/julia-$JULIA_VERSION/bin/julia -O0 --color=yes --project -e 'using Pkg; Pkg.test()'"
     agents:
       queue: Oceananigans
-      architecture: GPU
+      architecture: CPU
     retry:
       automatic:
         - exit_status: 1      
           limit: 1
-    depends_on: "init_gpu"
+    depends_on: "init"
 
   - label: "🍓 cpu tripolar grid tests"
     env:
