Add a gpu test for the tripolar grid (#4205)
* add a gpu test

* change the emoji

* adapt test

* add a test

* bugfix

* bugfix

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -197,7 +197,23 @@ steps:
 ##### Tripolar Grid tests
 #####
 
-  - label: "🦃 cpu tripolar grid tests"
+  - label: "🫐 gpu tripolar grid tests"
+    env:
+      JULIA_DEPOT_PATH: "$TARTARUS_HOME/.julia-$BUILDKITE_BUILD_NUMBER"
+      TEST_GROUP: "tripolar_grid"
+      GPU_TEST: "true"
+    commands:
+      - "$TARTARUS_HOME/julia-$JULIA_VERSION/bin/julia -O0 --color=yes --project -e 'using Pkg; Pkg.test()'"
+    agents:
+      queue: Oceananigans
+      architecture: CPU
+    retry:
+      automatic:
+        - exit_status: 1      
+          limit: 1
+    depends_on: "init"
+
+  - label: "🍓 cpu tripolar grid tests"
     env:
       JULIA_DEPOT_PATH: "$TARTARUS_HOME/.julia-$BUILDKITE_BUILD_NUMBER"
       TEST_GROUP: "tripolar_grid"
