Add utility constant_with_reactant_state and pin Reactant version

--- a/Project.toml
+++ b/Project.toml
@@ -80,7 +80,7 @@ OffsetArrays = "1.4"
 OrderedCollections = "1.1"
 Printf = "1.9"
 Random = "1.9"
-Reactant = "0.2.48"
+Reactant = "=0.2.50"
 Rotations = "1.0"
 SeawaterPolynomials = "0.3.5"
 SparseArrays = "1.9"
