--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,6 +40,7 @@ jobs:
         arch:
           - x64
     steps:
+      - run: julia -e 'using Pkg; pkg"add Reactant#main"'
       - run: |
           cat <<EOF > LocalPreferences.toml
           [Reactant]
