--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -777,7 +777,8 @@ steps:
       echo "xla_runtime = \"IFRT\"" >> LocalPreferences.toml
 
       cat LocalPreferences.toml
-
+      export CUDA_VISIBLE_DEVICES="-1"
+      
       $TARTARUS_HOME/julia-$JULIA_VERSION/bin/julia -O0 --color=yes --project -e 'using Pkg; Pkg.test()'
     agents:
       queue: Oceananigans
@@ -799,6 +800,7 @@ steps:
       echo "xla_runtime = \"PJRT\"" >> LocalPreferences.toml
 
       cat LocalPreferences.toml
+      export CUDA_VISIBLE_DEVICES="-1"
 
       $TARTARUS_HOME/julia-$JULIA_VERSION/bin/julia -O0 --color=yes --project -e 'using Pkg; Pkg.test()'
     agents:
