More env CUDA_VISIBLE_DEVICES

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -884,6 +884,7 @@ steps:
     env:
       JULIA_DEPOT_PATH: "$TARTARUS_HOME/.julia-$BUILDKITE_BUILD_NUMBER"
       TEST_GROUP: "reactant_2"
+      CUDA_VISIBLE_DEVICES: "-1"
     commands: |
       touch LocalPreferences.toml
 
@@ -891,7 +892,6 @@ steps:
       echo "xla_runtime = \"PJRT\"" >> LocalPreferences.toml
 
       cat LocalPreferences.toml
-      export CUDA_VISIBLE_DEVICES="-1"
 
       $TARTARUS_HOME/julia-$JULIA_VERSION/bin/julia -O0 --color=yes --project -e 'using Pkg; Pkg.test()'
     agents:
@@ -907,6 +907,7 @@ steps:
     env:
       JULIA_DEPOT_PATH: "$TARTARUS_HOME/.julia-$BUILDKITE_BUILD_NUMBER"
       TEST_GROUP: "reactant_2"
+      CUDA_VISIBLE_DEVICES: "-1"
     commands: |
       touch LocalPreferences.toml
 
@@ -914,7 +915,6 @@ steps:
       echo "xla_runtime = \"IFRT\"" >> LocalPreferences.toml
 
       cat LocalPreferences.toml
-      export CUDA_VISIBLE_DEVICES="-1"
 
       $TARTARUS_HOME/julia-$JULIA_VERSION/bin/julia -O0 --color=yes --project -e 'using Pkg; Pkg.test()'
     agents:
