--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,10 +45,8 @@ jobs:
           [Reactant]
           xla_runtime = "IFRT"
           EOF
-          using Pkg
-          Pkg.Registry.update()
-          Pkg.add([PackageSpec(; name="Reactant", rev="ap/sdy_fixes2")])'
-          Pkg.instantiate()
+
+          julia --project --color=yes -O0 -e 'using Pkg; Pkg.add([PackageSpec(; name="Reactant", rev="ap/sdy_fixes2")])'
       - uses: actions/checkout@v4
       - uses: julia-actions/setup-julia@v2
         with:
@@ -62,7 +60,7 @@ jobs:
           XLA_FLAGS: "--xla_force_host_platform_device_count=4"
           TEST_GROUP: "sharding"
 
-  distributed_tripolar:
+  mpi_tripolar:
     name: Distributed Tripolar Grid - Julia ${{ matrix.version }} - ${{ matrix.os }} - ${{ matrix.arch }}
     runs-on: ${{ matrix.os }}
     timeout-minutes: 120
@@ -85,7 +83,7 @@ jobs:
       - uses: julia-actions/julia-buildpkg@v1
       - uses: julia-actions/julia-runtest@v1
         env:
-          TEST_GROUP: "distributed_tripolar"
+          TEST_GROUP: "mpi_tripolar"
 
   turbulent_closures:
     name: Turbulence closures - Julia ${{ matrix.version }} - ${{ matrix.os }} - ${{ matrix.arch }}
