--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,23 +40,38 @@ jobs:
         arch:
           - x64
     steps:
-      - run: |
+      - name: Set XLA runtime
+        run: |
           cat <<EOF > LocalPreferences.toml
           [Reactant]
           xla_runtime = "IFRT"
           EOF
-      - uses: actions/checkout@v4
-      - uses: julia-actions/setup-julia@v2
-        with:
-          version: ${{ matrix.version }}
-          arch: ${{ matrix.arch }}
-      - uses: julia-actions/cache@v2
-      - uses: julia-actions/julia-buildpkg@v1
-      - uses: julia-actions/julia-runtest@v1
-        env:
-          REACTANT_TEST: true
-          XLA_FLAGS: "--xla_force_host_platform_device_count=4"
-          TEST_GROUP: "sharding"
+      - name: Instantiate environment
+        timeout-minutes: 90
+        shell: julia --color=yes --project {0}
+        run: |
+          using Pkg
+          Pkg.Registry.update()
+          Pkg.add([
+              PackageSpec(; name="Reactant", rev="ap/sdy_fixes2"),
+          #     PackageSpec(; name="ReactantCore", rev="main"),
+          #     PackageSpec(; name="Oceananigans", rev="main"),
+          #     PackageSpec(; name="ClimaOcean", rev="main"),
+          ])
+          Pkg.instantiate()
+      - name: Run sharding tests
+        - uses: actions/checkout@v4
+        - uses: julia-actions/setup-julia@v2
+          with:
+            version: ${{ matrix.version }}
+            arch: ${{ matrix.arch }}
+        - uses: julia-actions/cache@v2
+        - uses: julia-actions/julia-buildpkg@v1
+        - uses: julia-actions/julia-runtest@v1
+          env:
+            REACTANT_TEST: true
+            XLA_FLAGS: "--xla_force_host_platform_device_count=4"
+            TEST_GROUP: "sharding"
 
   mpi_tripolar:
     name: Distributed Tripolar Grid - Julia ${{ matrix.version }} - ${{ matrix.os }} - ${{ matrix.arch }}
