--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,7 +58,7 @@ jobs:
         run: |
           using Pkg
           Pkg.Registry.update()
-          Pkg.add([PackageSpec(; name="Reactant", rev="ap/sdy_fixes2")])
+          Pkg.add([PackageSpec(; name="Reactant", rev="main")])
           Pkg.instantiate()
       - name: Run sharding tests
         uses: julia-actions/julia-runtest@v1
