--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -777,7 +777,7 @@ steps:
       echo "xla_runtime = \"IFRT\"" >> LocalPreferences.toml
 
       cat LocalPreferences.toml
-
+      
       $TARTARUS_HOME/julia-$JULIA_VERSION/bin/julia -O0 --color=yes --project -e 'using Pkg; Pkg.test()'
     agents:
       queue: Oceananigans
@@ -792,6 +792,7 @@ steps:
     env:
       JULIA_DEPOT_PATH: "$TARTARUS_HOME/.julia-$BUILDKITE_BUILD_NUMBER"
       TEST_GROUP: "reactant_1"
+      CUDA_VISIBLE_DEVICES: "-1"
     commands: |
       touch LocalPreferences.toml
 
@@ -814,6 +815,7 @@ steps:
     env:
       JULIA_DEPOT_PATH: "$TARTARUS_HOME/.julia-$BUILDKITE_BUILD_NUMBER"
       TEST_GROUP: "reactant_1"
+      CUDA_VISIBLE_DEVICES: "-1"
     commands: |
       touch LocalPreferences.toml
 
@@ -882,6 +884,7 @@ steps:
     env:
       JULIA_DEPOT_PATH: "$TARTARUS_HOME/.julia-$BUILDKITE_BUILD_NUMBER"
       TEST_GROUP: "reactant_2"
+      CUDA_VISIBLE_DEVICES: "-1"
     commands: |
       touch LocalPreferences.toml
 
@@ -904,6 +907,7 @@ steps:
     env:
       JULIA_DEPOT_PATH: "$TARTARUS_HOME/.julia-$BUILDKITE_BUILD_NUMBER"
       TEST_GROUP: "reactant_2"
+      CUDA_VISIBLE_DEVICES: "-1"
     commands: |
       touch LocalPreferences.toml
 
