--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,37 +26,37 @@ concurrency:
   cancel-in-progress: ${{ startsWith(github.ref, 'refs/pull/') }}
 
 jobs:
-  # sharded_tripolar:
-  #   name: Sharding Tests - Julia ${{ matrix.version }} - ${{ matrix.os }} - ${{ matrix.arch }}
-  #   runs-on: ${{ matrix.os }}
-  #   timeout-minutes: 120
-  #   strategy:
-  #     fail-fast: false
-  #     matrix:
-  #       version:
-  #         - '1.10'
-  #       os:
-  #         - ubuntu-latest
-  #       arch:
-  #         - x64
-  #   steps:
-  #     - run: |
-  #         cat <<EOF > LocalPreferences.toml
-  #         [Reactant]
-  #         xla_runtime = "IFRT"
-  #         EOF
-  #     - uses: actions/checkout@v4
-  #     - uses: julia-actions/setup-julia@v2
-  #       with:
-  #         version: ${{ matrix.version }}
-  #         arch: ${{ matrix.arch }}
-  #     - uses: julia-actions/cache@v2
-  #     - uses: julia-actions/julia-buildpkg@v1
-  #     - uses: julia-actions/julia-runtest@v1
-  #       env:
-  #         REACTANT_TEST: true
-  #         XLA_FLAGS: "--xla_force_host_platform_device_count=4"
-  #         TEST_GROUP: "sharding"
+  sharded_tripolar:
+    name: Sharding Tests - Julia ${{ matrix.version }} - ${{ matrix.os }} - ${{ matrix.arch }}
+    runs-on: ${{ matrix.os }}
+    timeout-minutes: 120
+    strategy:
+      fail-fast: false
+      matrix:
+        version:
+          - '1.10'
+        os:
+          - ubuntu-latest
+        arch:
+          - x64
+    steps:
+      - run: |
+          cat <<EOF > LocalPreferences.toml
+          [Reactant]
+          xla_runtime = "IFRT"
+          EOF
+      - uses: actions/checkout@v4
+      - uses: julia-actions/setup-julia@v2
+        with:
+          version: ${{ matrix.version }}
+          arch: ${{ matrix.arch }}
+      - uses: julia-actions/cache@v2
+      - uses: julia-actions/julia-buildpkg@v1
+      - uses: julia-actions/julia-runtest@v1
+        env:
+          REACTANT_TEST: true
+          XLA_FLAGS: "--xla_force_host_platform_device_count=4"
+          TEST_GROUP: "sharding"
 
   mpi_tripolar:
     name: Distributed MPI Tripolar Grid - Julia ${{ matrix.version }} - ${{ matrix.os }} - ${{ matrix.arch }}
