--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,6 +56,7 @@ jobs:
       - uses: julia-actions/julia-buildpkg@v1
       - uses: julia-actions/julia-runtest@v1
         env:
+          JULIA_DEBUG: "Reactant, Reactant_jll"
           REACTANT_TEST: true
           TEST_GROUP: "sharding"
 
