Fixes for running on TPUs... (#4289)
* Extend set_to_function for non-sharded field

* Bugfix in stencil not using default FloatType

* Import R_Earth

* Fix broken import

* Fix sharded grids

* Rm shows

* build grid on CPU and switch it to sharded ractant

* try removing the xla forcing

* correct architecture for lat lon

* make sure sharding is initialized

* fix lat lon grid

* import r_Earth

* bugfix

* try running with IFRT

* quite a large bug

* a little cleanup

* we get to compiling of the first timestep

* reduce the MPI show madness

* Change to constant_with_arch

* create grid

* remove comment

* remove the tripolar shard

* add some info

* use (Base.julia_md())

* add replicate in z

* add sharding to the clock

* sharding the z direction

* add a comment

* Update distributed_grids.jl

* azz fix to zdirection

---------

Co-authored-by: Gregory Wagner <gwagner@santis-ln001.cscs.ch>
Co-authored-by: Simone Silvestri <silvestri.simone0@gmail.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ concurrency:
   cancel-in-progress: ${{ startsWith(github.ref, 'refs/pull/') }}
 
 jobs:
-  sharded_tripolar:
+  sharding_tests:
     name: Sharding Tests - Julia ${{ matrix.version }} - ${{ matrix.os }} - ${{ matrix.arch }}
     runs-on: ${{ matrix.os }}
     timeout-minutes: 120
@@ -41,10 +41,12 @@ jobs:
           - x64
     steps:
       - run: |
-          cat <<EOF > LocalPreferences.toml
-          [Reactant]
-          xla_runtime = "IFRT"
-          EOF
+          touch LocalPreferences.toml
+
+          echo "[Reactant]" >> LocalPreferences.toml
+          echo "xla_runtime = \"IFRT\"" >> LocalPreferences.toml
+
+          cat LocalPreferences.toml     
       - uses: actions/checkout@v4
       - uses: julia-actions/setup-julia@v2
         with:
@@ -54,8 +56,8 @@ jobs:
       - uses: julia-actions/julia-buildpkg@v1
       - uses: julia-actions/julia-runtest@v1
         env:
+          JULIA_DEBUG: "Reactant, Reactant_jll"
           REACTANT_TEST: true
-          XLA_FLAGS: "--xla_force_host_platform_device_count=1"
           TEST_GROUP: "sharding"
 
   mpi_tripolar:
