--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,7 +47,13 @@ jobs:
           echo "xla_runtime = \"IFRT\"" >> LocalPreferences.toml
 
           cat LocalPreferences.toml    
-      - run: pwd 
+      - run: |
+          pwd 
+          ls
+          ls -l
+          ls LocalPreferences.toml
+          ls Project.toml
+          cat Project.toml
       - uses: actions/checkout@v4
       - uses: julia-actions/setup-julia@v2
         with:
