--- a/Project.toml
+++ b/Project.toml
@@ -42,8 +42,8 @@ Enzyme = "7da242da-08ed-463a-9acd-ee780be4f1d9"
 Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
 MakieCore = "20f20a25-4f0e-4fdf-b5d1-57303727442b"
 Metal = "dde4c033-4e86-420c-a63e-0dd931031962"
-Reactant = "3c362404-f566-11ee-1572-e11a4b42c853"
 NCDatasets = "85f8d34a-cbdd-5861-8df4-14fed0d494ab"
+Reactant = "3c362404-f566-11ee-1572-e11a4b42c853"
 
 [extensions]
 OceananigansEnzymeExt = "Enzyme"
@@ -81,6 +81,7 @@ OffsetArrays = "1.4"
 OrderedCollections = "1.1"
 Printf = "1.9"
 Random = "1.9"
+Reactant = "0.2"
 ReactantCore = "0.1"
 Rotations = "1.0"
 SeawaterPolynomials = "0.3.9"
