--- a/Project.toml
+++ b/Project.toml
@@ -82,6 +82,7 @@ OrderedCollections = "1.1"
 Printf = "1.9"
 Random = "1.9"
 ReactantCore = "0.1"
+Reactant = "0.2.63"
 Rotations = "1.0"
 SeawaterPolynomials = "0.3.9"
 SparseArrays = "1.9"
