--- a/Project.toml
+++ b/Project.toml
@@ -15,10 +15,10 @@ FFTW = "7a1cc6ca-52ef-59f5-83cd-3a7055c09341"
 GPUArrays = "0c68f7d7-f131-5f86-a1c3-88cf8149b2d7"
 Glob = "c27321d9-0574-5035-807b-f59d2c89b15c"
 InteractiveUtils = "b77e0a4c-d291-57a0-90e8-8db25a27a240"
-IterativeSolvers = "42fd0dbc-a981-5370-80f2-aaf504508153"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 KernelAbstractions = "63c18a36-062a-441e-b654-da1e3ab1ce7c"
 KrylovPreconditioners = "45d422c2-293f-44ce-8315-2cb988662dec"
+Krylov = "ba0b0d4f-ebba-5204-a429-3ac8c609bfb7"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
 MPI = "da04e1cc-30fd-572f-bb4f-1f8673147195"
@@ -71,10 +71,10 @@ FFTW = "1"
 GPUArrays = "10.3, 11.2.2"
 Glob = "1.3"
 InteractiveUtils = "1.9"
-IterativeSolvers = "0.9"
 JLD2 = "0.4, 0.5"
 KernelAbstractions = "0.9.21"
 KrylovPreconditioners = "0.3.0"
+Krylov = "0.9.10"
 LinearAlgebra = "1.9"
 Logging = "1.9"
 MPI = "0.16, 0.17, 0.18, 0.19, 0.20"
