--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,49 +1,24 @@
-# This file is a template, and might need editing before it works on your project.
-# This is a sample GitLab CI/CD configuration file that should run without any modifications.
-# It demonstrates a basic 3 stage CI/CD pipeline. Instead of real tests or scripts,
-# it uses echo commands to simulate the pipeline execution.
-#
-# A pipeline is composed of independent jobs that run scripts, grouped into stages.
-# Stages run in sequential order, but jobs within stages run in parallel.
-#
-# For more information, see: https://docs.gitlab.com/ee/ci/yaml/#stages
-#
-# You can copy and paste this template into a new `.gitlab-ci.yml` file.
-# You should not add this template to an existing `.gitlab-ci.yml` file by using the `include:` keyword.
-#
-# To contribute improvements to CI/CD templates, please follow the Development guide at:
-# https://docs.gitlab.com/development/cicd/templates/
-# This specific template is located at:
-# https://gitlab.com/gitlab-org/gitlab/-/blob/master/lib/gitlab/ci/templates/Getting-Started.gitlab-ci.yml
+# this include allows us to reference defaults in anl/ci-resource/defaults
+include:
+  - project: 'anl/ci-resources/defaults'
+    ref: main
+    file:
+      - '/runners.yml'
 
-stages:          # List of stages for jobs, and their order of execution
-  - build
-  - test
-  - deploy
+stages:
+  - ci # stages may have any name
 
-build-job:       # This job runs in the build stage, which runs first.
-  stage: build
+# he below submits a batch job to the scheduler
+submit_batch: # CI jobs may have any name
+  stage: ci  # from the stages list above
+  extends: .aurora-batch-runner # this includes the defaults provided in the 'anl/ci-resources/defaults' project
+  variables:  # scheduler parameters must be included, adjust the below to match your values
+    ANL_AURORA_SCHEDULER_PARAMETERS: "-A Julia -l select=1,walltime=10:00,filesystems=home:flare -q debug"
+    JULIA_DEPOT_PATH: "/lus/flare/projects/Julia/mschanen/julia_depot_path"
   script:
-    - echo "Compiling the code..."
-    - echo "Compile complete."
-
-unit-test-job:   # This job runs in the test stage.
-  stage: test    # It only starts when the job in the build stage completes successfully.
-  script:
-    - echo "Running unit tests... This will take about 60 seconds."
-    - sleep 60
-    - echo "Code coverage is 90%"
-
-lint-test-job:   # This job also runs in the test stage.
-  stage: test    # It can run at the same time as unit-test-job (in parallel).
-  script:
-    - echo "Linting code... This will take about 10 seconds."
-    - sleep 10
-    - echo "No lint issues found."
-
-deploy-job:      # This job runs in the deploy stage.
-  stage: deploy  # It only runs when *both* jobs in the test stage complete successfully.
-  environment: production
-  script:
-    - echo "Deploying application..."
-    - echo "Application successfully deployed."
+    - id
+    - hostname
+    - echo "Running on $(hostname) with setuid shell runner"
+    - export JULIA
+    - /home/mschanen/.local/bin/julia-lts --project -e 'using Pkg; Pkg.update()'
+    - /home/mschanen/.local/bin/julia-lts --project test/test-oneapi.jl
