--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -6,7 +6,7 @@ env:
   JULIA_NUM_PRECOMPILE_TASKS: 24
   JULIA_NUM_THREADS: 8
   XLA_REACTANT_GPU_PREALLOCATE: false
-  CUDA_VISIBLE_DEVICES: "3" # General device used for GPU testing
+  CUDA_VISIBLE_DEVICES: "3" # Tartarus device for GPU testing
 
 steps:
   - label: "🏕️ initialize tartarus environment"
