--- a/.buildkite/pipeline-juliagpu.yml
+++ b/.buildkite/pipeline-juliagpu.yml
@@ -6,9 +6,14 @@ env:
 
 steps:
   - label: "👓 AMDGPU extension tests"
+    matrix:
+      setup:
+        version:
+          - "1.10"
+          - "1.11"
     plugins:
       - JuliaCI/julia#v1:
-          version: 1.10
+          version: "{{matrix.version}}"
       # - JuliaCI/julia-coverage#v1:
       #     codecov: true
     command: |
