--- a/.buildkite/pipeline-juliagpu.yml
+++ b/.buildkite/pipeline-juliagpu.yml
@@ -5,12 +5,11 @@ env:
   JULIA_NUM_THREADS: 4
 
 steps:
-  - label: "👓 AMDGPU extension tests"
+  - label: "🦕 AMDGPU extension tests - Julia {{matrix.version}}"
     matrix:
       setup:
         version:
           - "1.10"
-          - "1.11"
     plugins:
       - JuliaCI/julia#v1:
           version: "{{matrix.version}}"
@@ -23,6 +22,28 @@ steps:
     agents:
       queue: "juliagpu"
       rocm: "*"
-    timeout_in_minutes: 15
+    timeout_in_minutes: 30
+    soft_fail:
+      - exit_status: 3
+
+
+  - label: "🦖 oneAPI extension tests - Julia {{matrix.version}}"
+    matrix:
+      setup:
+        version:
+          - "1.10"
+    plugins:
+      - JuliaCI/julia#v1:
+          version: "{{matrix.version}}"
+      # - JuliaCI/julia-coverage#v1:
+      #     codecov: true
+    command: |
+      TEST_GROUP=init julia --project -O0 --color=yes -e 'using Pkg; Pkg.test()'
+
+      TEST_GROUP=oneapi julia --project -O0 --color=yes -e 'using Pkg; Pkg.test()'
+    agents:
+      queue: "juliagpu"
+      intel: "*"
+    timeout_in_minutes: 30
     soft_fail:
       - exit_status: 3
