add ConservativeRegridding branch to GHA

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -85,8 +85,16 @@ jobs:
           - uses: julia-actions/setup-julia@v2
             with:
               version: 1.10
+          - name: Instantiate environment
+            timeout-minutes: 90
+            shell: julia --color=yes --project {0}
+            run: |
+              using Pkg
+              Pkg.Registry.update()
+              Pkg.add([PackageSpec(; name="ConservativeRegridding", url=https://github.com/JuliaGeo/ConservativeRegridding.jl.git, rev="mk/interfacem")])
+              Pkg.instantiate()
           - uses: julia-actions/cache@v2
           - uses: julia-actions/julia-buildpkg@v1
           - uses: julia-actions/julia-runtest@v1
             env:
-              TEST_GROUP: "metal"
+              TEST_GROUP: {{ matrix.test_group }}
